RESOLVED FIXED260996
maybePauseDisplayRefreshCallbacks doesn't wait for MissedCommit
https://bugs.webkit.org/show_bug.cgi?id=260996
Summary maybePauseDisplayRefreshCallbacks doesn't wait for MissedCommit
Matt Woodrow
Reported 2023-08-31 14:17:31 PDT
<rdar://114606581> maybePauseDisplayRefreshCallbacks is pausing callbacks if nothing is in NeedsDisplayDidRefresh, but we also want to keep callbacks enabled for CommitLayerTreePending so that we transition to MissedCommit state.
Attachments
Matt Woodrow
Comment 1 2023-08-31 14:20:35 PDT
EWS
Comment 2 2023-09-04 18:15:26 PDT
Committed 267614@main (dae026f290e6): <https://commits.webkit.org/267614@main> Reviewed commits have been landed. Closing PR #17304 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.