maybePauseDisplayRefreshCallbacks doesn't wait for MissedCommit. https://bugs.webkit.org/show_bug.cgi?id=260996 <rdar://114606581>

Reviewed by Dan Glastonbury.

maybePauseDisplayRefreshCallbacks is pausing callbacks if nothing is in NeedsDisplayDidRefresh, but we
also want to keep callbacks enabled for CommitLayerTreePending so that we transition to MissedCommit state.

MissedCommit is required to trigger ASAP compositing when we're failing to reach the desired refresh rate, and
so we instead fall back to half refresh rate. This fixes a 6% regression in TodoMVC-React-Complex-DOM.

* Source/WebKit/UIProcess/RemoteLayerTree/RemoteLayerTreeDrawingAreaProxy.mm:
(WebKit::RemoteLayerTreeDrawingAreaProxy::maybePauseDisplayRefreshCallbacks):
(WebKit::RemoteLayerTreeDrawingAreaProxy::didRefreshDisplay):

Canonical link: https://commits.webkit.org/267614@main